# cc-json-parser

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: CLANG_TIDY_GUIDE.md  PROBLEM.md  SOLUTION.md
src/: main.cpp
util/: expected_exit_codes.txt  run_test.sh
